--- a/Webpage/static/css/theme.css
+++ b/Webpage/static/css/theme.css
@@ -241,6 +241,7 @@ select {
   border-radius: 7px;
   min-width: 100%;
   width: 100%;
+  height: 45px;
   margin-bottom: 2px;
   margin: 10px 0 2px 0;
 }
