--- a/Webpage/static/less/theme.less
+++ b/Webpage/static/less/theme.less
@@ -265,6 +265,7 @@ input, select {
     .border-radius();
     min-width: 100%;
     width: 100%;
+    height: 45px;
     margin-bottom: 2px;
     margin: 10px 0 2px 0;
     &:focus {
