--- a/Webpage/templates/admin/leases.html
+++ b/Webpage/templates/admin/leases.html
@@ -68,7 +68,7 @@
             if (/^[a-zA-Z0-9&+?_`~-]/.test(input.value)) {
                 input.setAttribute("class","satisfiedInputField");    //The pop up alert for a valid email address
                 // document.inquiryForm.getElementById("emailAddress").focus();
-                readyToSubmit()
+                // readyToSubmit()
                 return true;
             }
             else if (input.value!="" || (input.value=="" && input.hasAttribute("required"))) {
@@ -80,17 +80,18 @@
             }
             else {
                 input.setAttribute("class","inputField")
-                readyToSubmit()
+                // readyToSubmit()
                 return true;
             }
         }
         function readyToSubmit() {
             for (const ele of document.getElementById("newLeaseForm").querySelectorAll("[required]")) {
                 if (!ele.reportValidity()) {
-                    return;
+                    return false;
                 }
             }
-            document.getElementById("submitButton").disabled = false;
+            return true
+            // document.getElementById("submitButton").disabled = false;
         }
     </script>
 
@@ -458,6 +459,9 @@
                 return headers;
             }
             async function saveLease() {
+                if (!readyToSubmit()){
+                    return
+                }
                 const form = document.querySelector("#newLeaseForm");
                 
                 const submitBtn = document.getElementById('submitButton');
