updates UI on leases page

--- a/Webpage/templates/admin/leases.html
+++ b/Webpage/templates/admin/leases.html
@@ -303,7 +303,7 @@
                     </div>
                     <label id="userFormMessage" class="userFormMessage"></label>
                     <button type="button" class="button" tabindex="2" data-bs-dismiss="modal">Cancel</button>
-                    <button type="submit" class="button" tabindex="1" id="submitButton" onclick="saveLease()" disabled>Save</button>
+                    <button type="submit" class="button" tabindex="1" id="submitButton" onclick="saveLease()">Save</button>
                 </div>
             </div>
             </div>
