Dev work on Rent Roll page - Updated API to get rent roll info for ADMIN closes #41 - resolves (#46) lease issue - updating other things (rounding corners on selected header pg outline) - corrected a few other bugs

--- a/Webpage/static/css/theme.css
+++ b/Webpage/static/css/theme.css
@@ -57,6 +57,9 @@ footer {
 .selected-nav-item,
 .selected-secondary-nav-item {
   background-color: #27ae60;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
 }
 .selected-nav-item a,
 .selected-secondary-nav-item a {
