--- a/Webpage/static/less/theme.less
+++ b/Webpage/static/less/theme.less
@@ -86,7 +86,7 @@ header {
 }
 .selected-nav-item, .selected-secondary-nav-item{
     background-color: @primary-color;
-    // .border-radius();
+    .border-radius();
     a{
         color: @tertiary-color !important;
         // font-weight: bold;
