--- a/Webpage/templates/admin/properties.html
+++ b/Webpage/templates/admin/properties.html
@@ -65,7 +65,7 @@
             if (/^[a-zA-Z0-9&+?_`~-]/.test(input.value)) {
                 input.setAttribute("class","satisfiedInputField");    //The pop up alert for a valid email address
                 // document.inquiryForm.getElementById("emailAddress").focus();
-                readyToSubmit()
+                // readyToSubmit()
                 return true;
             }
             else if (input.value!="" || (input.value=="" && input.hasAttribute("required"))) {
@@ -77,17 +77,18 @@
             }
             else {
                 input.setAttribute("class","inputField")
-                readyToSubmit()
+                // readyToSubmit()
                 return true;
             }
         }
         function readyToSubmit() {
             for (const ele of document.getElementById("newPropertyForm").querySelectorAll("[required]")) {
                 if (!ele.reportValidity()) {
-                    return;
+                    return false;
                 }
             }
-            document.getElementById("submitButton").disabled=false
+            return true
+            // document.getElementById("submitButton").disabled=false
         }
     </script>
 
@@ -292,7 +293,7 @@
                     </div>
                     <label id="userFormMessage" class="userFormMessage"></label>
                     <button type="button" class="button" tabindex="2" data-bs-dismiss="modal">Cancel</button>
-                    <button type="submit" class="button" tabindex="1" id="submitButton" onclick="saveProperty()" disabled>Save</button>
+                    <button type="submit" class="button" tabindex="1" id="submitButton" onclick="saveProperty()">Save</button>
                 </div>
               </div>
             </div>
@@ -328,6 +329,9 @@
                 return headers;
             }
             async function saveProperty() {
+                if (!readyToSubmit()){
+                    return
+                }
                 const form = document.querySelector("#newPropertyForm");
                 
                 const submitBtn = document.getElementById('submitButton');
