updates to the UI to display Rent Roll

--- a/Webpage/templates/admin/people.html
+++ b/Webpage/templates/admin/people.html
@@ -129,7 +129,7 @@
                 <table class="table table-striped table-hover peopleTable">
                     <thead>
                         <tr class="TitleRow">
-                            <td diaplay:none class="hide">personID</td>
+                            <td display:none class="hide">personID</td>
                             <td>Person</td>
                             <td>Day Phone No.</td>
                             <td>Cell Phone No.</td>
@@ -183,7 +183,7 @@
                     let newRows = ``
                     for (let personData of data.people) {
                         let newRow = `<tr>
-                            <td diaplay:none class="hide">${personData.personID}</td>
+                            <td display:none class="hide">${personData.personID}</td>
                             <td>${personData.name}</td>
                             <td>${personData.phoneNumber}</td>
                             <td>${personData.cellPhoneNumber}</td>
