--- a/Webpage/templates/admin/properties.html
+++ b/Webpage/templates/admin/properties.html
@@ -107,7 +107,7 @@
                 <table class="table table-striped table-hover propertiesTable">
                     <thead>
                         <tr class="TitleRow">
-                            <td diaplay:none class="hide">propertyID</td>
+                            <td display:none class="hide">propertyID</td>
                             <td>Property Name</td>
                             <td>Address</td>
                             <td>City</td>
@@ -161,7 +161,7 @@
                     let newRows = ``
                     for (let propertyData of data.properties) {
                         let newRow = `<tr>
-                            <td diaplay:none class="hide">${propertyData.propertyID}</td>
+                            <td display:none class="hide">${propertyData.propertyID}</td>
                             <td>${propertyData.nickname}</td>
                             <td>${propertyData.address}</td>
                             <td>${propertyData.city}</td>
