--- a/Webpage/templates/admin/leases.html
+++ b/Webpage/templates/admin/leases.html
@@ -110,7 +110,7 @@
                 <table class="table table-striped table-hover leasesTable">
                     <thead>
                         <tr class="TitleRow">
-                            <td diaplay:none class="hide">leaseID</td>
+                            <td display:none class="hide">leaseID</td>
                             <td>Property</td>
                             <td>Listed Tenants</td>
                             <td>Monthly Rent</td>
@@ -167,7 +167,7 @@
                     console.log(data.leases)
                     for (let leaseData of data.leases) {
                         let newRow = `<tr>
-                            <td diaplay:none class="hide">${leaseData.leaseID}</td>
+                            <td display:none class="hide">${leaseData.leaseID}</td>
                             <td><span style='font-size: 1.2rem;font-weight: 600;'>${leaseData.nickname}</span><br/>${leaseData.address}</td>
                             <td>${leaseData.tenants}</td>
                             <td>${leaseData.monthlyRent}</td>
@@ -266,7 +266,7 @@
                                         <table class="table table-striped table-hover feeTable">
                                             <thead>
                                                 <tr class="TitleRow">
-                                                    <td diaplay:none class="hide">leaseFeeID</td>
+                                                    <td display:none class="hide">leaseFeeID</td>
                                                     <td>Fee Name</td>
                                                     <td>Amount</td>
                                                     <td></td>
