--- a/Webpage/templates/admin/rent_roll.html
+++ b/Webpage/templates/admin/rent_roll.html
@@ -111,6 +111,10 @@
         </div>
         <script type="text/javascript">
 
+            // window.onload = function() {
+            //     loadTable();
+            // }
+
             async function loadTable () {
                 const messageBox = document.getElementById('userMessage');
                 const loadingSpinner = document.getElementById('tableLoadingSpinner');
@@ -148,6 +152,9 @@
                                     newCell2.innerText = `$ ${statuses.amount}`
                                 }
                                 newCell2.classList.add("chartCell")
+                                if (statuses.paymentID) {
+                                    newRow.setAttribute(onclick, `showPayment(${statuses.paymentID})`)
+                                }
                                 newRow.appendChild(newCell2);
                             }
                             document.getElementById('rentRollTableContents').appendChild(newRow)
@@ -201,7 +208,320 @@
             }
         </script>
         
+        <!-- Modal -->
+        <div class="modal fade" id="leasesEditModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="staticBackdropLabel">Add New Lease</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid leaseData">
+                        <form action="" name="newLeaseForm" id="newLeaseForm">
+                            <div class="row">
+                                <div class="col">
+                                    {{ form.property(class="inputField", onfocusout="validate(this)") }}
+                                    {{ form.property.label(class="inputLabel") }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    {{ form.tenant(class="inputField", onfocusout="validate(this)") }}
+                                    {{ form.tenant.label(class="inputLabel") }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-3">
+                                    {{ form.availableDate(class="inputField", onfocusout="validate(this)") }}
+                                    {{ form.availableDate.label(class="inputLabel") }}
+                                </div>
+                                <div class="col-md-1">
+                                    
+                                </div>
+                                <div class="col-md-3">
+                                    {{ form.moveInDate(class="inputField", onfocusout="validate(this)") }}
+                                    {{ form.moveInDate.label(class="inputLabel") }}
+                                </div>
+                                <div class="col-md-1">
+                                    
+                                </div>
+                                <div class="col-md-3">
+                                    {{ form.terminateDate(class="inputField", onfocusout="validate(this)") }}
+                                    {{ form.terminateDate.label(class="inputLabel") }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    {{ form.leaseStatus(class="inputField", onfocusout="validate(this)") }}
+                                    {{ form.leaseStatus.label(class="inputLabel") }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-5">
+                                    {{ form.leasePeriod(class="inputField", onfocusout="validate(this)") }}
+                                    {{ form.leasePeriod.label(class="inputLabel") }}
+                                </div>
+                                <div class="col-md-2">
+                                    <p></p>
+                                </div>
+                                <div class="col-md-5">
+                                    {{ form.leaseSuccessionPeriod(class="inputField", onfocusout="validate(this)") }}
+                                    {{ form.leaseSuccessionPeriod.label(class="inputLabel") }}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-1">
+                                    <label class="inputLabel" for="feeTable" style="padding-left: 0px;">Fee Schedule</label>
+                                    <div style="text-align: center;"><i class="fa-solid fa-circle-plus" id="addFeeButton" onclick = addFee()></i></div>
+                                    <div style="text-align: center;"><i class="fa-solid fa-circle-minus hide" id="removeFeeButton" onclick = removeLastFee()></i></div>
+                                </div>
+                                <div class="col-md-11">
+                                    <div class="container table-responsive-md" id="render_feeTable">
+                        
+                                        <table class="table table-striped table-hover feeTable">
+                                            <thead>
+                                                <tr class="TitleRow">
+                                                    <td display:none class="hide">leaseFeeID</td>
+                                                    <td>Fee Name</td>
+                                                    <td>Amount</td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="feeTableContent">
+                                                <tr display:none class = "hide" id="rowTemplate">
+                                                    <td display:none class="hide"><input type="number" class="leaseFeeID" id="leaseFeeID"></td>
+                                                    <td>{{ form.feeName(class="inputField", onfocusout="validate(this)") }}</td>
+                                                    <td>{{ form.feeAmount(class="inputField", onfocusout="validate(this)") }}</td>
+                                                    <td>{{ form.feeOccurrence(class="inputField", onfocusout="validate(this)") }}</td>
+                                                    <td style="border-bottom:none;"> beginning after </td>
+                                                    <td>{{ form.startAfterLength(class="inputField", onfocusout="validate(this)") }}</td>
+                                                    <td>{{ form.startAfterPeriod(class="inputField", onfocusout="validate(this)") }}</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    
+                    <!-- <form action="http://api.hartzlerhome.solutions/admin/leases" method="post">
+                        
+                    </form> -->
+                </div>
+                <div class="modal-footer">
+                    <div class="col col-sm-1">
+                        <img src="{{ url_for('static', filename = 'media/spinner.gif') }}" alt="" id="loadingSpinner" class = "hide">
+                    </div>
+                    <label id="userFormMessage" class="userFormMessage"></label>
+                    <button type="button" class="button" tabindex="2" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="button" tabindex="1" id="submitButton" onclick="saveLease()">Save</button>
+                </div>
+            </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            
+            window.onload = function() {
+                loadTable();
+                loadModalOptions();
+            }
+            
+            async function loadModalOptions() {
+                // 1. get the data from the API service
+                const response = await fetch(`http://api.hartzlerhome.solutions/leaseOptions?sessionID=${document.cookie.split('=')[1]}`);
+                const data = await response.json()
+                console.log(data)
 
-        
+                // 2. add the data as options in the correct select boxes
+                if (data.status == 200) {
+                    // 2.1 populate the property select boxes
+                    let propertySelect = document.getElementById('property');
+                    propertySelect.appendChild(document.createElement("option"));
+                    for (let propertyData of data.properties) {
+                        // create new option
+                        let option = document.createElement("option");
+                        option.value = propertyData.propertyID;
+                        option.innerText = `${propertyData.nickname} - ${propertyData.address}`;
+                        propertySelect.appendChild(option);
+                    };
+
+                    // 2.2 populate the tenant select boxes
+                    let tenantSelect = document.getElementById('tenant');
+                    tenantSelect.appendChild(document.createElement("option"));
+                    for (let tenantData of data.people) {
+                        // create new option
+                        let option = document.createElement("option");
+                        option.value = tenantData.personID;
+                        option.innerText = `${tenantData.name} - ${tenantData.emailAddress}`; 
+                        tenantSelect.appendChild(option);
+                    };
+
+                    // 2.3 populate the feeOccurrence boxes
+                    let feeOccurrenceSelect = document.getElementById('feeOccurrence');
+                    feeOccurrenceSelect.appendChild(document.createElement("option"));
+                    for (let leaseOccurrenceData of data.occurrences) {
+                        // create new option
+                        let option = document.createElement("option");
+                        option.value = leaseOccurrenceData.occurrenceID;
+                        option.innerText = leaseOccurrenceData.name; 
+                        feeOccurrenceSelect.appendChild(option);
+                    };
+                    
+                    // 2.4 populate the period boxes
+                    let leaseOccurrenceSelect = document.getElementById('leasePeriod');
+                    let leaseSuccessionOccurrenceSelect = document.getElementById('leaseSuccessionPeriod');
+                    let startAfterOccurrenceSelect = document.getElementById('startAfterPeriod');
+                    leaseOccurrenceSelect.appendChild(document.createElement("option"));
+                    leaseSuccessionOccurrenceSelect.appendChild(document.createElement("option"));
+                    startAfterOccurrenceSelect.appendChild(document.createElement("option"));
+                    for (let periodData of data.periods) {
+                        // create new option
+                        let option2 = document.createElement("option");
+                        let option3 = document.createElement("option");
+                        option2.value = periodData.periodID;
+                        option3.value = periodData.periodID;
+                        option2.innerText = `${periodData.name}-to-${periodData.name}`; 
+                        option3.innerText = periodData.name; 
+                        leaseSuccessionOccurrenceSelect.appendChild(option2);
+                        startAfterOccurrenceSelect.appendChild(option3);
+                        if (periodID.isLeasePeriod == true){
+                            let option = document.createElement("option");
+                            option.value = periodData.periodID;
+                            option.innerText = `1 ${periodData.name}`; 
+                            leaseOccurrenceSelect.appendChild(option);
+                        }
+                    };
+
+                    // 2.5 populate the feeName boxe
+                    let feeNameSelect = document.getElementById('feeName');
+                    feeNameSelect.appendChild(document.createElement("option"));
+                    for (let feeTypesData of data.feeTypes) {
+                        // create new option
+                        let option = document.createElement("option");
+                        option.value = feeTypesData.feeID;
+                        option.innerText = feeTypesData.name;
+                        option.title = `Description: ${feeTypesData.description}\nDefault Price: ${feeTypesData.defaultPrice}`;
+                        feeNameSelect.appendChild(option);
+                    };
+                    // document.getElementById('newLeaseButton').disabled = false;
+                    return;
+                };
+                
+                console.log(data);
+                // document.getElementById('newLeaseButton').disabled = true;
+            };
+            function addFee() {
+                let feeTable = document.getElementById('feeTableContent');
+                let feeTemplaterRow = document.getElementById('rowTemplate');
+
+                
+                // create row
+                let row = document.createElement("tr");
+                
+                row.innerHTML = feeTemplaterRow.innerHTML;
+                
+                for (const ele of row.getElementsByTagName("select")) {
+                    ele.required = true;
+                }
+                let requiredInputs = ['feeAmount', 'startAfterLength']
+                for (const ele of row.getElementsByTagName("input")) {
+                    if (requiredInputs.includes(ele.id)) {
+                        ele.required = true;
+                    };
+                }
+
+                // let inputs = feeTemplaterRow.getElementsByTagName('select')
+                feeTable.appendChild(row);
+                document.getElementById('removeFeeButton').classList.remove('hide')
+            }
+
+            function removeLastFee() {
+                const feeTable = document.getElementById('feeTableContent');
+                var rowCount = feeTable.rows.length;
+                if (rowCount <= 2) {
+                    document.getElementById('removeFeeButton').classList.add('hide');
+                };
+                feeTable.deleteRow(rowCount -1);
+            }
+
+            function showPayment (paymentID) {
+                console.log(paymentID)
+                let myModal= document.getElementById('leasesEditModal')
+                myModal.show()
+            }
+            function buildJsonData(form) {
+                const jsonData = {'fees': []};
+                const leaseFeeInfo = ['leaseFeeID', 'feeName','feeAmount','feeOccurrence','startAfterLength','startAfterPeriod']
+                
+                let leaseFee = {};
+                for (const pair of new FormData(form)) {
+                    if (leaseFeeInfo.includes(pair[0]) && pair[1]!='') {
+                        leaseFee[pair[0]] = pair[1];
+                        if (pair[0] == 'startAfterPeriod'){
+                            jsonData['fees'].push(leaseFee);
+                            leaseFee = {};
+                        }
+                    }else {
+                        jsonData[pair[0]] = pair[1];
+                    }
+                };
+                // jsonData['fees']
+                return jsonData;
+            }
+
+            function buildHeaders () {
+                const headers = {
+                    "Content-Type": "application/json"
+                };
+                return headers;
+            }
+            async function saveLease() {
+                if (!readyToSubmit()){
+                    return
+                }
+                const form = document.querySelector("#newLeaseForm");
+                
+                const submitBtn = document.getElementById('submitButton');
+                const spinner = document.getElementById('loadingSpinner');
+                const messageBox = document.getElementById('userFormMessage');
+                submitBtn.disabled = true;
+                spinner.classList.remove('hide');
+                messageBox.setAttribute("class","")
+                messageBox.innerText = "Timeout: No response from server"
+                setTimeout(() => submitBtn.disabled = false, 20000);
+                setTimeout(() => spinner.classList.add('hide'), 20000);
+                
+                const jsonData = buildJsonData(form);
+                const headers = buildHeaders();
+
+                const response = await submitPostHttpRequest("/leases", headers, jsonData);
+
+                if (response) {
+                    const status = response.status
+                    const jsonResponse = response.message
+                    const saveModal = document.querySelector('#leasesEditModal')
+                    spinner.classList.add('hide')
+                    console.log(jsonResponse)
+                    messageBox.innerText = jsonResponse
+
+                    if (status <300) {
+                        messageBox.setAttribute("class","success");
+                        setTimeout(() => document.location.href = '/leases', 2500)
+                    } else {
+                        messageBox.setAttribute("class", "danger")
+                        if ('redirect' in response){
+                            setTimeout(()=> document.location.href = response['redirect'], 2500);
+                        }
+                    }
+                }
+            }
+
+        </script>
+
     </main>
 {% endblock %}
